--- a/src/ru/contacty.html
+++ b/src/ru/contacty.html
@@ -296,15 +296,26 @@
                     Харьков, Киев, Полтава, Днепр, Запорожье, Ровно, Львов,
                     Ивано-Франковск, Черновцы, Винница, Житомир, Одесса,
                     Кривой Рог, Чернигов, Калуш, Коломыя, Стрый.</h6>
-                <div class="container hr-line-contacts"></div>
                 <ul>
                     <li class="text-nowrap tel">
                         <i class="bi bi-telephone-fill green"></i>
                         <a href="tel:+380950252822">+38(095) 025-28-22</a>
                     </li>
-                    <li class="text-nowrap mail">
+                    <!-- <li class="text-nowrap mail">
                         <i class="bi bi-envelope-fill green"></i>
                         <a href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
+                    </li> -->
+                </ul>
+                <div class="container hr-line-contacts"></div>
+                <h6><b>Електронная почта:</b></h6>
+                <ul>
+                    <!-- <li class="text-nowrap tel">
+                        <i class="bi bi-telephone-fill green"></i>
+                        <a href="tel:+380950252822">+38(095) 025-28-22</a>
+                    </li> -->
+                    <li class="text-nowrap mail">
+                        <i class="bi bi-envelope-fill green"></i>
+                        <a href="support@bianchiprof.com">support@bianchiprof.com</a>
                     </li>
                 </ul>
             </div>
@@ -391,13 +402,13 @@
                                 <a class="telephone text-nowrap" href="tel:+380974996005">т. +38 (097) 499-60-05</a>
                             </div>
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
                                 <a class="telephone text-nowrap"
                                     href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-4 p-4 offset-md-2">
                         <div class="footer-left">
@@ -410,12 +421,13 @@
                             </p>
                         </div>
                         <h6>Менеджер по развитию</h6>
-                        <p>
+                        <p class="footer-left">
                             <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
+                        <h6>В случае вопросов, замечаний или предложений обращайтесь по эл.адресу:</h6>
                         <p>
                             <a class="telephone text-nowrap"
-                                href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
+                            href="mailto:support@bianchiprof.com">support@bianchiprof.com</a>
                         </p>
                     </div>
                 </div>
