--- a/src/syropi.html
+++ b/src/syropi.html
@@ -971,13 +971,13 @@
                                 <a class="telephone text-nowrap" href="tel:+380974996005">т. +38 (097) 499-60-05</a>
                             </div>
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
                                 <a class="telephone text-nowrap"
                                     href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-4 p-4 offset-md-2">
                         <div class="footer-left">
@@ -990,12 +990,13 @@
                             </p>
                         </div>
                         <h6>Менеджер з розвитку</h6>
-                        <p>
+                        <p class="footer-left">
                             <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
+                        <h6>У разі запитань, зауважень чи пропозицій звертайтесь за ел.адресою:</h6>
                         <p>
                             <a class="telephone text-nowrap"
-                                href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
+                                href="mailto:support@bianchiprof.com">support@bianchiprof.com</a>
                         </p>
                     </div>
                 </div>
