--- a/src/contacty.html
+++ b/src/contacty.html
@@ -298,15 +298,26 @@
                     Харків, Київ, Полтава, Дніпро, Запоріжжя, Рівне, Львів,
                     Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
                     Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.</h6>
-                <div class="container hr-line-contacts"></div>
                 <ul>
                     <li class="text-nowrap tel">
                         <i class="bi bi-telephone-fill green"></i>
                         <a href="tel:+380950252822">+38(095) 025-28-22</a>
                     </li>
-                    <li class="text-nowrap mail">
+                    <!-- <li class="text-nowrap mail">
                         <i class="bi bi-envelope-fill green"></i>
                         <a href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
+                    </li> -->
+                </ul>
+                <div class="container hr-line-contacts"></div>
+                <h6><b>Електронна адреса:</b></h6>
+                <ul>
+                    <!-- <li class="text-nowrap tel">
+                        <i class="bi bi-telephone-fill green"></i>
+                        <a href="tel:+380950252822">+38(095) 025-28-22</a>
+                    </li> -->
+                    <li class="text-nowrap mail">
+                        <i class="bi bi-envelope-fill green"></i>
+                        <a href="support@bianchiprof.com">support@bianchiprof.com</a>
                     </li>
                 </ul>
             </div>
@@ -392,13 +403,13 @@
                                 <a class="telephone text-nowrap" href="tel:+380974996005">т. +38 (097) 499-60-05</a>
                             </div>
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
                                 <a class="telephone text-nowrap"
                                     href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-4 p-4 offset-md-2">
                         <div class="footer-left">
@@ -411,12 +422,13 @@
                             </p>
                         </div>
                         <h6>Менеджер з розвитку</h6>
-                        <p>
+                        <p class="footer-left">
                             <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
+                        <h6>У разі запитань, зауважень чи пропозицій звертайтесь за ел.адресою:</h6>
                         <p>
                             <a class="telephone text-nowrap"
-                                href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
+                                href="mailto:support@bianchiprof.com">support@bianchiprof.com</a>
                         </p>
                     </div>
                 </div>
