--- a/src/zernovoy_kofe.html
+++ b/src/zernovoy_kofe.html
@@ -344,7 +344,8 @@
     </div>
     <!-- /////////////////////////////////////Toast///////////////////////////// -->
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
-        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="60000">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="true"
+        data-bs-delay="15000">
             <div class="toast-header">
                 <img src="./img/logo_popup.webp" class="rounded me-2" alt="logo">
                 <strong class="me-auto">Бажаєте розрахувати собівартість напоїв?</strong>
@@ -395,13 +396,13 @@
                                 <a class="telephone text-nowrap" href="tel:+380974996005">т. +38 (097) 499-60-05</a>
                             </div>
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
                                 <a class="telephone text-nowrap"
                                     href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-4 p-4 offset-md-2">
                         <div class="footer-left">
@@ -414,12 +415,13 @@
                             </p>
                         </div>
                         <h6>Менеджер з розвитку</h6>
-                        <p>
+                        <p class="footer-left">
                             <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
+                        <h6>У разі запитань, зауважень чи пропозицій звертайтесь за ел.адресою:</h6>
                         <p>
                             <a class="telephone text-nowrap"
-                                href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
+                                href="mailto:support@bianchiprof.com">support@bianchiprof.com</a>
                         </p>
                     </div>
                 </div>
