--- a/src/index.html
+++ b/src/index.html
@@ -515,10 +515,17 @@
                         <p class="footer-left">
                             <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
-                        <h6>У разі запитань, зауважень чи пропозицій звертайтесь за ел.адресою:</h6>
-                        <p>
+                        <h6>Ел.адреса для запитань, зауважень та пропозицій:</h6>
+                        <p class="footer-left">
                             <a class="telephone text-nowrap"
                                 href="mailto:support@bianchiprof.com">support@bianchiprof.com</a>
+                        </p>
+                        <h6>Юридична інформація</h6>
+                        <p>
+                            <a class="telephone text-nowrap" href="./legal_terms.html">Умови використання сайту</a>
+                        </p>
+                        <p>
+                            <a class="telephone text-nowrap" href="./privacy_policy.html">Політика конфіденційності</a>
                         </p>
                     </div>
                 </div>
