--- a/src/ru/contacty.html
+++ b/src/ru/contacty.html
@@ -316,15 +316,21 @@
                     </li> -->
                 </ul>
                 <div class="container hr-line-contacts"></div>
-                <h6><b>Електронная почта:</b></h6>
+                <h6><b>Электронная почта:</b></h6>
                 <ul>
-                    <!-- <li class="text-nowrap tel">
-                        <i class="bi bi-telephone-fill green"></i>
-                        <a href="tel:+380950252822">+38(095) 025-28-22</a>
-                    </li> -->
                     <li class="text-nowrap mail">
                         <i class="bi bi-envelope-fill green"></i>
                         <a href="support@bianchiprof.com">support@bianchiprof.com</a>
+                    </li>
+                </ul>
+                <h6><b>Юридическая информация</b></h6>
+                <ul>
+                    <li class="text-nowrap tel">
+                        <a class="legal-link" href="./legal_terms.html">Условия использования сайта</a> 
+                       
+                    </li>
+                    <li class="text-nowrap tel">
+                        <a class="legal-link" href="./privacy_policy.html">Политика конфиденциальности</a>
                     </li>
                 </ul>
             </div>
@@ -433,11 +439,25 @@
                         <p class="footer-left">
                             <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
-                        <h6>В случае вопросов, замечаний или предложений обращайтесь по эл.адресу:</h6>
-                        <p>
-                            <a class="telephone text-nowrap"
-                            href="mailto:support@bianchiprof.com">support@bianchiprof.com</a>
-                        </p>
+                        <h6>Эл.адрес для вопросов, замечаний и предложений:</h6>
+              <p class="footer-left">
+                <a
+                  class="telephone text-nowrap"
+                  href="mailto:support@bianchiprof.com"
+                  >support@bianchiprof.com</a
+                >
+              </p>
+              <h6>Юридическая информация</h6>
+              <p>
+                <a class="telephone text-nowrap" href="./legal_terms.html"
+                  >Условия использования сайта</a
+                >
+              </p>
+              <p>
+                <a class="telephone text-nowrap" href="./privacy_policy.html"
+                  >Политика конфиденциальности</a
+                >
+              </p>
                     </div>
                 </div>
             </div>
