--- a/src/ru/zernovoy_kofe.html
+++ b/src/ru/zernovoy_kofe.html
@@ -428,11 +428,25 @@
                         <p class="footer-left">
                             <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
-                        <h6>В случае вопросов, замечаний или предложений обращайтесь по эл.адресу:</h6>
-                        <p>
-                            <a class="telephone text-nowrap"
-                            href="mailto:support@bianchiprof.com">support@bianchiprof.com</a>
-                        </p>
+                        <h6>Эл.адрес для вопросов, замечаний и предложений:</h6>
+              <p class="footer-left">
+                <a
+                  class="telephone text-nowrap"
+                  href="mailto:support@bianchiprof.com"
+                  >support@bianchiprof.com</a
+                >
+              </p>
+              <h6>Юридическая информация</h6>
+              <p>
+                <a class="telephone text-nowrap" href="./legal_terms.html"
+                  >Условия использования сайта</a
+                >
+              </p>
+              <p>
+                <a class="telephone text-nowrap" href="./privacy_policy.html"
+                  >Политика конфиденциальности</a
+                >
+              </p>
                     </div>
                 </div>
             </div>
