--- a/src/contacty.html
+++ b/src/contacty.html
@@ -320,13 +320,19 @@
                 <div class="container hr-line-contacts"></div>
                 <h6><b>Електронна адреса:</b></h6>
                 <ul>
-                    <!-- <li class="text-nowrap tel">
-                        <i class="bi bi-telephone-fill green"></i>
-                        <a href="tel:+380950252822">+38(095) 025-28-22</a>
-                    </li> -->
                     <li class="text-nowrap mail">
                         <i class="bi bi-envelope-fill green"></i>
                         <a href="support@bianchiprof.com">support@bianchiprof.com</a>
+                    </li>
+                </ul>
+                <h6><b>Юридична інформація</b></h6>
+                <ul>
+                    <li class="text-nowrap tel">
+                        <a class="legal-link" href="./legal_terms.html">Умови використання сайту</a> 
+                       
+                    </li>
+                    <li class="text-nowrap tel">
+                        <a class="legal-link" href="./privacy_policy.html">Політика конфіденційності</a>
                     </li>
                 </ul>
             </div>
@@ -435,10 +441,17 @@
                         <p class="footer-left">
                             <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
-                        <h6>У разі запитань, зауважень чи пропозицій звертайтесь за ел.адресою:</h6>
-                        <p>
+                        <h6>Ел.адреса для запитань, зауважень та пропозицій:</h6>
+                        <p class="footer-left">
                             <a class="telephone text-nowrap"
                                 href="mailto:support@bianchiprof.com">support@bianchiprof.com</a>
+                        </p>
+                        <h6>Юридична інформація</h6>
+                        <p>
+                            <a class="telephone text-nowrap" href="./legal_terms.html">Умови використання сайту</a>
+                        </p>
+                        <p>
+                            <a class="telephone text-nowrap" href="./privacy_policy.html">Політика конфіденційності</a>
                         </p>
                     </div>
                 </div>
