--- a/src/ru/legal_terms.html
+++ b/src/ru/legal_terms.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Правовые условия использования сайта" />
-    <meta name="keywords" content="gравовые условия" />
+    <meta name="keywords" content="правовые условия" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Пользовательское соглашение | Bianchi Professional</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon" />
