--- a/src/ru/privacy_policy.html
+++ b/src/ru/privacy_policy.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Правовые условия использования сайта" />
-    <meta name="keywords" content="gравовые условия" />
+    <meta name="description" content="Политика конфиденциальности" />
+    <meta name="keywords" content="политика конфиденциальности" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Пользовательское соглашение | Bianchi Professional</title>
+    <title>Политика конфиденциальности | Bianchi Professional</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
