--- a/src/index.html
+++ b/src/index.html
@@ -229,8 +229,15 @@
             </div>
         </div>
     </nav>
+    <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
+    <div class="banner">
+        <div class="container">
+            <a href="https://facebook.com/bianchiprofessional" target="_blank"><img src="./img/index/banner.webp" class="img-fluid" alt="banner"></a>
+        </div>
+    </div>
+    
     <!-- /////////////////////////////////////////   Video    ////////////////////////////////////////     -->
-    <div class="fullscreen-bg">
+    <!-- <div class="fullscreen-bg">
         <div class="overlay">
         </div>
         <video loop muted autoplay poster="./img/index/start.webp" class="fullscreen-bg__video">
@@ -238,7 +245,7 @@
             <source src="video/video.mp4" type="video/mp4">
             <source src="video/video.webm" type="video/webm">
         </video>
-    </div>
+    </div> -->
     <!-- /////////////////////////////////////////   Main text    ////////////////////////////////////////     -->
     <section class="main-text main-text-size mb-4">
         <div class="container">
