--- a/src/ru/dlya_magazinov_i_setey.html
+++ b/src/ru/dlya_magazinov_i_setey.html
@@ -1206,7 +1206,7 @@
                     <div class="img-fluid">
                         <a href="./avtomaty.html"><img src="../img/dlya_magazinov_i_setey/carimali.webp" class="scale"
                                 alt="Carimali BlueDot"></a>
-                        <p>Franke FM-800</p>
+                        <p>Carimali BlueDot</p>
                     </div>
                 </div>
                 <div class="col-sm-4 col-lg-2">
