--- a/src/ru/chay_stakany.html
+++ b/src/ru/chay_stakany.html
@@ -9,9 +9,7 @@
       content="Золотые стаканы компании Bianchi Professional узнаваемы потребителем во многих городах Украины.
     | Стаканы производятся из прочного качественного картона с применением наружной ламинации
    В ассортименте представлены разные объемы." />
-    <meta
-      name="keywords"
-      content="bianchi, кофе, стаканы для кофе, стаканы для чая" />
+    <meta name="keywords" content="bianchi, кофе, стаканы для кофе, стаканы для чая" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Стаканы для кофе та чаю | Стаканы для вендинга и ХоРеКи</title>
     <link rel="icon" href="../favicon.png" type="image/x-icon" />
@@ -42,9 +40,7 @@
       !(function (f, b, e, v, n, t, s) {
         if (f.fbq) return;
         n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
+          n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments);
         };
         if (!f._fbq) f._fbq = n;
         n.push = n;
@@ -56,12 +52,7 @@
         t.src = v;
         s = b.getElementsByTagName(e)[0];
         s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
+      })(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
       fbq("init", "1211586936450413");
       fbq("track", "PageView");
       fbq("track", "Lead");
@@ -150,9 +141,7 @@
               <ul>
                 <li class="telephone">ВЕНДИНГ</li>
                 <li class="telephone text-nowrap">
-                  <a class="telephone" href="tel:+380950252822">
-                    (095) 025-28-22
-                  </a>
+                  <a class="telephone" href="tel:+380950252822">(095) 025-28-22</a>
                 </li>
               </ul>
             </div>
@@ -187,10 +176,7 @@
           class="sidepanel__icon">
           <img src="../img/index/facebook_green.webp" alt="facebook" />
         </a>
-        <a
-          target="_blank"
-          href="https://t.me/bianchi_prof"
-          class="sidepanel__icon">
+        <a target="_blank" href="https://t.me/bianchi_prof" class="sidepanel__icon">
           <img src="../img/index/telegram_green.webp" alt="telegram" />
         </a>
       </div>
@@ -223,14 +209,10 @@
           aria-label="Переключатель навигации">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="btn text-nowrap" role="button" href="./index.html">
-                ПРО НАС
-              </a>
+              <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
             </li>
             <li class="nav-item">
               <ul class="btn-group">
@@ -244,16 +226,12 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li>
-                      <a
-                        class="dropdown-item"
-                        href="./dlya_magazinov_i_setey.html">
+                      <a class="dropdown-item" href="./dlya_magazinov_i_setey.html">
                         Для магазинов и торговых сетей
                       </a>
                     </li>
                     <li>
-                      <a
-                        class="dropdown-item"
-                        href="./dlya_cafe_restoranov.html">
+                      <a class="dropdown-item" href="./dlya_cafe_restoranov.html">
                         Для кафе, ресторанов, офисов
                       </a>
                     </li>
@@ -333,15 +311,11 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="btn text-nowrap" role="button" href="./contacty.html">
-                КОНТАКТЫ
-              </a>
+              <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТЫ</a>
             </li>
             <li class="nav-item">
               <div class="btn-group lang" role="group">
-                <a class="btn btn-outline-success" href="../chay_stakany.html">
-                  UA
-                </a>
+                <a class="btn btn-outline-success" href="../chay_stakany.html">UA</a>
                 <a class="btn btn-outline-success active" href="#">RU</a>
               </div>
             </li>
@@ -392,12 +366,9 @@
                 Чай Bianchi в ассортименте и картонный фирменный стакан
               </h3>
               <small>
+                <p class="lh-sm">Чай в пакетиках в индивидуальном конвертике.</p>
                 <p class="lh-sm">
-                  Чай в пакетиках в индивидуальном конвертике.
-                </p>
-                <p class="lh-sm">
-                  Коллекция вкусов удовлетворит любой, даже самый взыскательный
-                  вкус!
+                  Коллекция вкусов удовлетворит любой, даже самый взыскательный вкус!
                 </p>
               </small>
             </div>
@@ -446,12 +417,12 @@
               <h3 class="text-center">Картонные стаканы</h3>
               <small>
                 <p class="lh-sm">
-                  Золотые стаканы компании Bianchi Professional узнаваемы
-                  потребителем в многих городах Украины.
+                  Золотые стаканы компании Bianchi Professional узнаваемы потребителем в
+                  многих городах Украины.
                 </p>
                 <p class="lh-sm">
-                  Стаканы изготавливаются из прочного качественного картона с
-                  применением наружной. ламинации.
+                  Стаканы изготавливаются из прочного качественного картона с применением
+                  наружной. ламинации.
                 </p>
                 <p class="lh-sm">В ассортименте представлены разные объемы.</p>
               </small>
@@ -516,8 +487,8 @@
             <div class="col-4 p-4 offset-md-1">
               <h6>ХОРЕКА</h6>
               <p class="footer-left">
-                Установка кофемашин по городам: Харьков, Киев, Белая Церковь,
-                Умань, Бровары, Борисполь, Черкассы, Хмельницкий
+                Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань,
+                Бровары, Борисполь, Черкассы, Хмельницкий
               </p>
               <div class="row">
                 <div class="col col-md-6 footer-left">
@@ -573,10 +544,9 @@
               <div class="footer-left">
                 <h6>ВЕНДИНГ</h6>
                 <p>
-                  Установка вендингового оборудования по городам: Харьков, Киев,
-                  Полтава, Днепр, Запорожье, Ровно, Львов, Ивано-Франковск,
-                  Черновцы, Винница, Житомир, Одесса, Кривой Рог, Чернигов,
-                  Калуш, Коломыя, Стрий.
+                  Установка вендингового оборудования по городам: Харьков, Киев, Полтава,
+                  Днепр, Запорожье, Ровно, Львов, Ивано-Франковск, Черновцы, Винница,
+                  Житомир, Одесса, Кривой Рог, Чернигов, Калуш, Коломыя, Стрий.
                 </p>
               </div>
               <h6>Менеджер по развитию</h6>
@@ -587,9 +557,7 @@
               </p>
               <h6>Эл.адрес для вопросов, замечаний и предложений:</h6>
               <p class="footer-left">
-                <a
-                  class="telephone text-nowrap"
-                  href="mailto:support@bianchiprof.com">
+                <a class="telephone text-nowrap" href="mailto:support@bianchiprof.com">
                   support@bianchiprof.com
                 </a>
               </p>
@@ -609,7 +577,7 @@
         </div>
       </div>
       <div class="separator">
-        <h6><small>© 2016-2023 Bianchi professional</small></h6>
+        <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
     <!-- /////////////////////////////////////modal///////////////////////////// -->
@@ -683,10 +651,7 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                 Закрыть
               </button>
               <button name="sendRequestModal" class="btn send-request-modal">
