--- a/src/ru/index.html
+++ b/src/ru/index.html
@@ -328,13 +328,17 @@
     </div> -->
     <!-- /////////////////////////////////////////   Video    ////////////////////////////////////////     -->
     <div class="fullscreen-bg">
-        <div class="overlay">
-        </div>
-        <video loop muted autoplay poster="../img/index/banner.webp" class="fullscreen-bg__video">
-            <source src="../video/video.ogv" type="video/ogg">
-            <source src="../video/video.mp4" type="video/mp4">
-            <source src="../video/video.webm" type="video/webm">
-        </video>
+      <div class="overlay"></div>
+      <video
+        loop
+        muted
+        autoplay
+        poster="../img/index/banner.webp"
+        class="fullscreen-bg__video">
+        <source src="../video/video.ogv" type="video/ogg" />
+        <source src="../video/video.mp4" type="video/mp4" />
+        <source src="../video/video.webm" type="video/webm" />
+      </video>
     </div>
     <!-- /////////////////////////////////////////   Main text    ////////////////////////////////////////     -->
     <section class="main-text main-text-size mb-4">
@@ -721,7 +725,7 @@
         </div>
       </div>
       <div class="separator">
-        <h6><small>© 2016-2023 Bianchi professional</small></h6>
+        <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
     <!-- /////////////////////////////////////modal///////////////////////////// -->
