--- a/src/ru/contacty.html
+++ b/src/ru/contacty.html
@@ -132,10 +132,10 @@
             </div>
             <div class="header__item col">
               <ul>
-                <li class="telephone text-nowrap">ХМЕЛЬНИЦКИЙ, ВИННИЦА</li>
+                <li class="telephone text-nowrap">ХМЕЛЬНИЦКИЙ, ВИННИЦА,</li>
                 <li class="telephone text-nowrap">
                   <a class="telephone text-nowrap" href="tel:+380974996005">
-                    (097) 499-60-05
+                    ТЕРНОПОЛЬ (097) 499-60-05
                   </a>
                 </li>
               </ul>
@@ -387,7 +387,7 @@
             </li>
           </ul>
           <div class="container hr-line-contacts"></div>
-          <h6><b>ХМЕЛЬНИЦКИЙ, ВИННИЦА</b></h6>
+          <h6><b>ХМЕЛЬНИЦКИЙ, ВИННИЦА, ТЕРНОПОЛЬ</b></h6>
           <ul>
             <li class="text-nowrap tel">
               <i class="bi bi-telephone-fill green"></i>
@@ -508,7 +508,7 @@
               <h6>ХОРЕКА</h6>
               <p class="footer-left">
                 Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань,
-                Бровары, Борисполь, Черкассы, Хмельницкий
+                Бровары, Борисполь, Черкассы, Хмельницкий, Тернополь
               </p>
               <div class="row">
                 <div class="col col-md-6 footer-left">
@@ -546,7 +546,7 @@
                   </a>
                 </div>
                 <div class="col footer-left">
-                  <h6>Хмельницкий, Винница</h6>
+                  <h6>Хмельницкий, Винница, Тернополь</h6>
                   <a class="telephone text-nowrap" href="tel:+380974996005">
                     т. +38 (097) 499-60-05
                   </a>
