--- a/src/ru/legal_terms.html
+++ b/src/ru/legal_terms.html
@@ -112,10 +112,10 @@
             </div>
             <div class="header__item col">
               <ul>
-                <li class="telephone text-nowrap">ХМЕЛЬНИЦЬКИЙ, ВИННИЦА</li>
+                <li class="telephone text-nowrap">ХМЕЛЬНИЦКИЙ, ВИННИЦА,</li>
                 <li class="telephone text-nowrap">
                   <a class="telephone text-nowrap" href="tel:+380974996005">
-                    (097) 499-60-05
+                    ТЕРНОПОЛЬ (097) 499-60-05
                   </a>
                 </li>
               </ul>
@@ -567,7 +567,7 @@
               <h6>ХОРЕКА</h6>
               <p class="footer-left">
                 Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань,
-                Бровары, Борисполь, Черкассы, Хмельницкий
+                Бровары, Борисполь, Черкассы, Хмельницкий, Тернополь
               </p>
               <div class="row">
                 <div class="col col-md-6 footer-left">
@@ -605,7 +605,7 @@
                   </a>
                 </div>
                 <div class="col footer-left">
-                  <h6>Хмельницкий, Винница</h6>
+                  <h6>Хмельницкий, Винница, Тернополь</h6>
                   <a class="telephone text-nowrap" href="tel:+380974996005">
                     т. +38 (097) 499-60-05
                   </a>
