--- a/src/contacty.html
+++ b/src/contacty.html
@@ -130,10 +130,10 @@
             </div>
             <div class="header__item col">
               <ul>
-                <li class="telephone text-nowrap">ХМЕЛЬНИЦЬКИЙ, ВІННИЦЯ</li>
+                <li class="telephone text-nowrap">ХМЕЛЬНИЦЬКИЙ, ВІННИЦЯ,</li>
                 <li class="telephone text-nowrap">
                   <a class="telephone text-nowrap" href="tel:+380974996005">
-                    (097) 499-60-05
+                    ТЕРНОПІЛЬ (097) 499-60-05
                   </a>
                 </li>
               </ul>
@@ -385,7 +385,7 @@
             </li>
           </ul>
           <div class="container hr-line-contacts"></div>
-          <h6><b>ХМЕЛЬНИЦЬКИЙ, ВІННИЦЯ</b></h6>
+          <h6><b>ХМЕЛЬНИЦЬКИЙ, ВІННИЦЯ, ТЕРНОПІЛЬ</b></h6>
           <ul>
             <li class="text-nowrap tel">
               <i class="bi bi-telephone-fill green"></i>
@@ -502,7 +502,7 @@
               <h6>ХОРЕКА</h6>
               <p class="footer-left">
                 Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква,
-                Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький
+                Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький, Тернопіль
               </p>
               <div class="row">
                 <div class="col col-md-6 footer-left">
@@ -540,7 +540,7 @@
                   </a>
                 </div>
                 <div class="col footer-left">
-                  <h6>Хмельницький, Вінниця</h6>
+                  <h6>Хмельницький, Вінниця, Тернопіль</h6>
                   <a class="telephone text-nowrap" href="tel:+380974996005">
                     т. +38 (097) 499-60-05
                   </a>
