--- a/src/ru/vending_avtomaty.html
+++ b/src/ru/vending_avtomaty.html
@@ -101,9 +101,10 @@
                     </div>
                     <div class="header__item col">
                         <ul>
-                            <li class="telephone text-nowrap">ХМЕЛЬНИЦКИЙ, ВИННИЦА</li>
+                            <li class="telephone text-nowrap">ХМЕЛЬНИЦКИЙ, ВИННИЦА,</li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone text-nowrap" href="tel:+380974996005">(097) 499-60-05</a>
+                                <a class="telephone text-nowrap" href="tel:+380974996005">
+                                ТЕРНОПОЛЬ (097) 499-60-05
                             </li>
                         </ul>
                     </div>
@@ -582,8 +583,8 @@
                     <div class="col-4 p-4 offset-md-1">
                         <h6>ХОРЕКА</h6>
                         <p class="footer-left">
-                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань, Бровары, Борисполь,
-                            Черкассы, Хмельницкий
+                            Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань,
+                            Бровары, Борисполь, Черкассы, Хмельницкий, Тернополь
                         </p>
                         <div class="row">
                             <div class="col col-md-6 footer-left">
@@ -611,7 +612,7 @@
                                 <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
                             </div>
                             <div class="col footer-left">
-                                <h6>Хмельницкий, Винница</h6>
+                                <h6>Хмельницкий, Винница, Тернополь</h6>
                                 <a class="telephone text-nowrap" href="tel:+380974996005">т. +38 (097) 499-60-05</a>
                             </div>
                         </div>
