--- a/src/index.html
+++ b/src/index.html
@@ -632,8 +632,7 @@
               <h6>ХОРЕКА</h6>
               <p class="footer-left">
                 Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква,
-                Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький, Тернопіль,
-                Тернопіль
+                Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький, Тернопіль
               </p>
               <div class="row">
                 <div class="col col-md-6 footer-left">
