--- a/src/ru/vending_avtomaty.html
+++ b/src/ru/vending_avtomaty.html
@@ -101,13 +101,18 @@
                     </div>
                     <div class="header__item col">
                         <ul>
-                            <li class="telephone text-nowrap">ХМЕЛЬНИЦКИЙ, ВИННИЦА,</li>
-                            <li class="telephone text-nowrap">
-                                <a class="telephone text-nowrap" href="tel:+380974996005">
-                                ТЕРНОПОЛЬ (097) 499-60-05
-                            </li>
+                          <li class="telephone text-nowrap">
+                            <a class="telephone text-nowrap" href="tel:+380974996005">
+                              ХМЕЛЬНИЦКИЙ, ТЕРНОПОЛЬ (097) 499-60-05
+                            </a>
+                          </li>
+                          <li class="telephone text-nowrap">
+                            <a class="telephone text-nowrap" href="tel:+380931322311">
+                              ВИННИЦА (093) 132-23-11
+                            </a>
+                          </li>
                         </ul>
-                    </div>
+                      </div>
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ВЕНДИНГ</li>
@@ -612,8 +617,16 @@
                                 <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
                             </div>
                             <div class="col footer-left">
-                                <h6>Хмельницкий, Винница, Тернополь</h6>
-                                <a class="telephone text-nowrap" href="tel:+380974996005">т. +38 (097) 499-60-05</a>
+                                <h6>Хмельницкий, Тернополь, Шепетовка</h6>
+                                <a class="telephone text-nowrap" href="tel:+380974996005">
+                                  т. +38 (097) 499-60-05
+                                </a>
+                            </div>
+                            <div class="col footer-left">
+                                <h6>Винница</h6>
+                                <a class="telephone text-nowrap" href="tel:+380931322311">
+                                  т. +38 (093) 132-23-11
+                                </a>
                             </div>
                         </div>
                         <!-- <div class="row">
