--- a/src/chay_stakany.html
+++ b/src/chay_stakany.html
@@ -127,10 +127,14 @@
             </div>
             <div class="header__item col">
               <ul>
-                <li class="telephone text-nowrap">ХМЕЛЬНИЦЬКИЙ, ВІННИЦЯ,</li>
                 <li class="telephone text-nowrap">
                   <a class="telephone text-nowrap" href="tel:+380974996005">
-                    ТЕРНОПІЛЬ (097) 499-60-05
+                    ХМЕЛЬНИЦЬКИЙ, ТЕРНОПІЛЬ (097) 499-60-05
+                  </a>
+                </li>
+                <li class="telephone text-nowrap">
+                  <a class="telephone text-nowrap" href="tel:+380931322311">
+                    ВІННИЦЯ (093) 132-23-11
                   </a>
                 </li>
               </ul>
@@ -480,7 +484,8 @@
               <h6>ХОРЕКА</h6>
               <p class="footer-left">
                 Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква,
-                Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький, Тернопіль
+                Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький, Тернопіль,
+                Вінниця, Шепетівка
               </p>
               <div class="row">
                 <div class="col col-md-6 footer-left">
@@ -518,9 +523,15 @@
                   </a>
                 </div>
                 <div class="col footer-left">
-                  <h6>Хмельницький, Вінниця, Тернопіль</h6>
+                  <h6>Хмельницький, Тернопіль, Шепетівка</h6>
                   <a class="telephone text-nowrap" href="tel:+380974996005">
                     т. +38 (097) 499-60-05
+                  </a>
+                </div>
+                <div class="col footer-left">
+                  <h6>Вінниця</h6>
+                  <a class="telephone text-nowrap" href="tel:+380931322311">
+                    т. +38 (093) 132-23-11
                   </a>
                 </div>
               </div>
