--- a/src/ru/contacty.html
+++ b/src/ru/contacty.html
@@ -132,10 +132,14 @@
             </div>
             <div class="header__item col">
               <ul>
-                <li class="telephone text-nowrap">ХМЕЛЬНИЦКИЙ, ВИННИЦА,</li>
                 <li class="telephone text-nowrap">
                   <a class="telephone text-nowrap" href="tel:+380974996005">
-                    ТЕРНОПОЛЬ (097) 499-60-05
+                    ХМЕЛЬНИЦКИЙ, ТЕРНОПОЛЬ (097) 499-60-05
+                  </a>
+                </li>
+                <li class="telephone text-nowrap">
+                  <a class="telephone text-nowrap" href="tel:+380931322311">
+                    ВИННИЦА (093) 132-23-11
                   </a>
                 </li>
               </ul>
@@ -387,11 +391,18 @@
             </li>
           </ul>
           <div class="container hr-line-contacts"></div>
-          <h6><b>ХМЕЛЬНИЦКИЙ, ВИННИЦА, ТЕРНОПОЛЬ</b></h6>
+          <h6><b>ХМЕЛЬНИЦКИЙ, ТЕРНОПОЛЬ, ШЕПЕТОВКА</b></h6>
           <ul>
             <li class="text-nowrap tel">
               <i class="bi bi-telephone-fill green"></i>
               <a href="tel:+380974996005">+38(097) 499-60-05</a>
+            </li>
+          </ul>
+          <h6><b>ВИННИЦА</b></h6>
+          <ul>
+            <li class="text-nowrap tel">
+              <i class="bi bi-telephone-fill green"></i>
+              <a href="tel:+380931322311">+38(093) 132-23-11</a>
             </li>
           </ul>
         </div>
@@ -508,7 +519,7 @@
               <h6>ХОРЕКА</h6>
               <p class="footer-left">
                 Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань,
-                Бровары, Борисполь, Черкассы, Хмельницкий, Тернополь
+                Бровары, Борисполь, Черкассы, Хмельницкий, Тернополь, Шепетовка, Винница
               </p>
               <div class="row">
                 <div class="col col-md-6 footer-left">
@@ -546,9 +557,15 @@
                   </a>
                 </div>
                 <div class="col footer-left">
-                  <h6>Хмельницкий, Винница, Тернополь</h6>
+                  <h6>Хмельницкий, Тернополь, Шепетовка</h6>
                   <a class="telephone text-nowrap" href="tel:+380974996005">
                     т. +38 (097) 499-60-05
+                  </a>
+                </div>
+                <div class="col footer-left">
+                  <h6>Винница</h6>
+                  <a class="telephone text-nowrap" href="tel:+380931322311">
+                    т. +38 (093) 132-23-11
                   </a>
                 </div>
               </div>
