change vending city

--- a/src/privacy_policy.html
+++ b/src/privacy_policy.html
@@ -554,7 +554,7 @@
               <p class="footer-left">
                 Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква,
                 Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький, Тернопіль,
-                Вінниця, Шепетівка
+                Вінниця, Шепетівка.
               </p>
               <div class="row">
                 <div class="col col-md-6 footer-left">
@@ -616,9 +616,10 @@
               <div class="footer-left">
                 <h6>ВЕНДІНГ</h6>
                 <p>
-                  Встановлення вендінгового обладнання по містах: Харків, Київ, Полтава,
-                  Дніпро, Запоріжжя, Рівне, Львів, Івано-Франківськ, Чернівці, Вінниця,
-                  Житомир, Одеса, Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.
+                  Встановлення вендінгового обладнання по містах: Харків, Київ, Бровари,
+                  Біла Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк,
+                  Тернопіль, Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця,
+                  Житомир, Одеса, Кривий Ріг, Чернігів, Коломия, Стрий.
                 </p>
               </div>
               <h6>Менеджер з розвитку</h6>
