--- a/src/ru/moloko_shokolad.html
+++ b/src/ru/moloko_shokolad.html
@@ -711,9 +711,10 @@
               <div class="footer-left">
                 <h6>ВЕНДИНГ</h6>
                 <p>
-                  Установка вендингового оборудования по городам: Харьков, Киев, Полтава,
-                  Днепр, Запорожье, Ровно, Львов, Ивано-Франковск, Черновцы, Винница,
-                  Житомир, Одесса, Кривой Рог, Чернигов, Калуш, Коломыя, Стрий.
+                  Установка вендингового оборудования по городам: Харьков, Киев, Бровары,
+                  Белая Церковь, Полтава, Николаев, Днепр, Запорожье, Ровно, Львов, Луцк,
+                  Тернополь, Каменец-Подольский, Ивано-Франковск, Черновцы, Винница,
+                  Житомир, Одесса, Кривой Рог, Чернигов, Коломыя, Стрый.
                 </p>
               </div>
               <h6>Менеджер по развитию</h6>
