--- a/src/index.html
+++ b/src/index.html
@@ -636,7 +636,8 @@
               <h6>ХОРЕКА</h6>
               <p class="footer-left">
                 Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква,
-                Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький, Тернопіль, Вінниця, Шепетівка
+                Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький, Тернопіль,
+                Вінниця, Шепетівка.
               </p>
               <div class="row">
                 <div class="col col-md-6 footer-left">
@@ -698,9 +699,10 @@
               <div class="footer-left">
                 <h6>ВЕНДІНГ</h6>
                 <p>
-                  Встановлення вендінгового обладнання по містах: Харків, Київ, Полтава,
-                  Дніпро, Запоріжжя, Рівне, Львів, Івано-Франківськ, Чернівці, Вінниця,
-                  Житомир, Одеса, Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.
+                  Встановлення вендінгового обладнання по містах: Харків, Київ, Бровари,
+                  Біла Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк,
+                  Тернопіль, Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця,
+                  Житомир, Одеса, Кривий Ріг, Чернігів, Коломия, Стрий.
                 </p>
               </div>
               <h6>Менеджер з розвитку</h6>
