--- a/src/ru/contacty.html
+++ b/src/ru/contacty.html
@@ -410,9 +410,10 @@
           <h5 class="text-center green"><b>ВЕНДИНГ</b></h5>
           <div class="container hr-line-contacts"></div>
           <h6>
-            Установка вендингового оборудования по городам: Харьков, Киев, Полтава, Днепр,
-            Запорожье, Ровно, Львов, Ивано-Франковск, Черновцы, Винница, Житомир, Одесса,
-            Кривой Рог, Чернигов, Калуш, Коломыя, Стрый.
+            Установка вендингового оборудования по городам: Харьков, Киев, 
+            Бровары, Белая Церковь, Полтава, Николаев, Днепр, Запорожье, 
+            Ровно, Львов, Луцк, Тернополь, Каменец-Подольский, Ивано-Франковск, 
+            Черновцы, Винница, Житомир, Одесса, Кривой Рог, Чернигов, Коломыя, Стрый.
           </h6>
           <ul>
             <li class="text-nowrap tel">
@@ -581,9 +582,10 @@
               <div class="footer-left">
                 <h6>ВЕНДИНГ</h6>
                 <p>
-                  Установка вендингового оборудования по городам: Харьков, Киев, Полтава,
-                  Днепр, Запорожье, Ровно, Львов, Ивано-Франковск, Черновцы, Винница,
-                  Житомир, Одесса, Кривой Рог, Чернигов, Калуш, Коломыя, Стрий.
+                  Установка вендингового оборудования по городам: Харьков, Киев, 
+                  Бровары, Белая Церковь, Полтава, Николаев, Днепр, Запорожье, 
+                  Ровно, Львов, Луцк, Тернополь, Каменец-Подольский, Ивано-Франковск, 
+                  Черновцы, Винница, Житомир, Одесса, Кривой Рог, Чернигов, Коломыя, Стрый.
                 </p>
               </div>
               <h6>Менеджер по развитию</h6>
