--- a/src/ru/vending_avtomaty.html
+++ b/src/ru/vending_avtomaty.html
@@ -85,7 +85,7 @@
                         <ul>
                             <li class="telephone text-nowrap">БРОВАРЫ, БОРИСПОЛЬ,</li>
                             <li class="telephone text-nowrap">
-                                <a class="telephone" href="tel:+380989700921">ЧЕРНИГОВ (098) 970-09-21</a>
+                               <a class="telephone" href="tel:+380989700921">ЧЕРНИГОВ (098) 970-09-21</a>
                             </li>
                         </ul>
                     </div>
@@ -151,12 +151,18 @@
         <div class="container">
             <div>
                 <img src="../img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48"
-                    class="d-inline-block align-text-top">
-                <img src="../img/logo_menu2.webp" alt="logo" width="142" height="48"
-                    class="d-inline-block align-text-top">
+                    class="d-inline-block align-text-top" />
+                    <a href="./index.html">
+                        <img
+                          src="../img/logo_menu2.webp"
+                          alt="logo"
+                          width="142"
+                          height="48"
+                          class="d-inline-block align-text-top" />
+                      </a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
