--- a/src/contacty.html
+++ b/src/contacty.html
@@ -195,12 +195,14 @@
             width="52"
             height="48"
             class="d-inline-block align-text-top" />
-          <img
-            src="./img/logo_menu2.webp"
-            alt="logo"
-            width="142"
-            height="48"
-            class="d-inline-block align-text-top" />
+          <a href="./index.html">
+            <img
+              src="./img/logo_menu2.webp"
+              alt="logo"
+              width="142"
+              height="48"
+              class="d-inline-block align-text-top" />
+          </a>
         </div>
         <button
           class="navbar-toggler"
@@ -214,9 +216,9 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <ul class="btn-group">
                 <li class="nav-item">
@@ -408,10 +410,10 @@
           <h5 class="text-center green"><b>ВЕНДІНГ</b></h5>
           <div class="container hr-line-contacts"></div>
           <h6>
-            Встановлення вендінгового обладнання по містах: Харків, Київ, Бровари,
-            Біла Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк,
-            Тернопіль, Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця,
-            Житомир, Одеса, Кривий Ріг, Чернігів, Коломия, Стрий.
+            Встановлення вендінгового обладнання по містах: Харків, Київ, Бровари, Біла
+            Церква, Полтава, Миколаїв, Дніпро, Запоріжжя, Рівне, Львів, Луцьк, Тернопіль,
+            Кам'янець-Подільський, Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
+            Кривий Ріг, Чернігів, Коломия, Стрий.
           </h6>
           <ul>
             <li class="text-nowrap tel">
