--- a/src/index.html
+++ b/src/index.html
@@ -193,12 +193,14 @@
             width="52"
             height="48"
             class="d-inline-block align-text-top" />
-          <img
-            src="./img/logo_menu2.webp"
-            alt="logo"
-            width="142"
-            height="48"
-            class="d-inline-block align-text-top" />
+          <a href="./index.html">
+            <img
+              src="./img/logo_menu2.webp"
+              alt="logo"
+              width="142"
+              height="48"
+              class="d-inline-block align-text-top" />
+          </a>
         </div>
         <button
           class="navbar-toggler"
@@ -212,9 +214,9 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <ul class="btn-group">
                 <li class="nav-item">
@@ -354,67 +356,111 @@
               клієнтів в цьому напрямку. Розроблені нами оригінальні рецепти впізнавані
               споживачами завдяки новітнім смакам та оформленню напоїв.
             </p>
-            <ul>
-              <li>Більше 5000 клієнтів та торгівельних точок співпрацюють з нами.</li>
-              <li>
-                Понад 3 000 000 оригінальних напоїв щомісяця смакують наші щасливі
-                споживачі.
-              </li>
-              <li>
-                В 24 регіонах України помітна наша присутність (завдяки вендінговій
-                мережі).
-              </li>
-              <li>
-                16 років присутності на ринку дає можливості задовольнити будь-які потреби
-                наших партнерів на всій території Україні.
-              </li>
-              <li>
-                Фахівці компанії регулярно відвідують наших клієнтів, пропонуючи повний
-                спектр сервісного обслуговування, від дрібного планового ремонту на місці,
-                до капітального ремонту на території нашої майстерні.
-              </li>
-              <li>
-                Ми гарантуємо максимально можливий прибуток при роботі з нашими
-                продуктами.
-              </li>
-            </ul>
           </div>
         </div>
       </div>
     </section>
+    
+    <!-- /////////////////////////////////////////   Cards    ////////////////////////////////////////     -->
+    <section class="indexicons">
+      <div class="container indexcards">
+        <div class="row gy-1">
+          <div class="col">
+            <div class="card text-center">
+              <img
+                src="./img/index/icon1.webp"
+                class="card-img-top"
+                alt="icon" />
+              <div class="card-body">
+                <h5 class="fw-bold">5000 + клієнтів</h5>
+                <p class="card-text main-text-size">
+                  Більше 5000 клієнтів та торгівельних точок співпрацюють з нами.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card text-center">
+              <img
+                src="./img/index/icon2.webp"
+                class="card-img-top"
+                alt="icon" />
+              <div class="card-body">
+                <h5 class="fw-bold">3 000 000 +  напоїв</h5>
+                <p class="card-text main-text-size">
+                  Понад 3 000 000 оригінальних напоїв щомісяця смакують наші щасливі споживачі.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card text-center">
+              <img
+                src="./img/index/icon3.webp"
+                class="card-img-top"
+                alt="icon" />
+              <div class="card-body">
+                <h5 class="fw-bold">24 регіони України</h5>
+                <p class="card-text main-text-size">
+                  В 24 регіонах України помітна наша присутність (завдяки вендінговій мережі).
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card text-center">
+              <img
+                src="./img/index/icon4.webp"
+                class="card-img-top"
+                alt="icon" />
+              <div class="card-body">
+                <h5 class="fw-bold">Сервісне обслуговування</h5>
+                <p class="card-text main-text-size">
+                  Фахівці компанії регулярно відвідують наших клієнтів, пропонуючи повний спектр сервісного обслуговування.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card text-center">
+              <img
+                src="./img/index/icon5.webp"
+                class="card-img-top"
+                alt="icon" />
+              <div class="card-body">
+                <h5 class="fw-bold">Максимальний прибуток</h5>
+                <p class="card-text main-text-size">
+                  Ми гарантуємо максимально можливий прибуток при роботі з нашими продуктами.
+                </p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <div class="container hr-line"></div>
     <!-- /////////////////////////////////////////   Images    ////////////////////////////////////////     -->
     <div class="container images mb-5">
       <div class="row">
-        <div class="col-lg-4 p-1">
-          <div class="image">
+        <div class="col-lg-6 p-1 text-center">
+          <div class="indeximage">
             <a href="./dlya_magazinov_i_setey.html">
-              <img src="./img/index/horeca.webp" class="card-img-top" alt="horeca" />
+              <img src="./img/index/horeka.webp" class="card-img-top" alt="orenda" />
             </a>
             <div class="bottom-left">
-              ДЛЯ МАГАЗИНІВ
-              <br />
-              ТА ТОРГІВЕЛЬНИХ МЕРЕЖ
+              ОРЕНДА КАВОМАШИН
             </div>
           </div>
         </div>
-        <div class="col-lg-4 p-1">
-          <div class="image">
+        <div class="col-lg-6 p-1">
+          <div class="indeximage">
             <a href="./dlya_cafe_restoranov.html">
-              <img src="./img/index/classic.webp" class="card-img-top" alt="classic" />
+              <img src="./img/index/vending2.webp" class="card-img-top" alt="vending" />
             </a>
             <div class="bottom-left">
-              ДЛЯ КАФЕ, РЕСТОРАНІВ,
-              <br />
-              ОФІСІВ
+              ВЕНДІНГ
             </div>
-          </div>
-        </div>
-        <div class="col-lg-4 p-1">
-          <div class="image">
-            <a href="./vending.html">
-              <img src="./img/index/vending.webp" class="card-img-top" alt="vending" />
-            </a>
-            <div class="bottom-left">ВЕНДІНГ</div>
           </div>
         </div>
       </div>
