--- a/src/ru/avtomaty.html
+++ b/src/ru/avtomaty.html
@@ -65,7 +65,6 @@
     </noscript>
     <!-- End Facebook Pixel Code -->
   </head>
-
   <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
@@ -196,12 +195,14 @@
             width="52"
             height="48"
             class="d-inline-block align-text-top" />
-          <img
-            src="../img/logo_menu2.webp"
-            alt="logo"
-            width="142"
-            height="48"
-            class="d-inline-block align-text-top" />
+          <a href="./index.html">
+            <img
+              src="../img/logo_menu2.webp"
+              alt="logo"
+              width="142"
+              height="48"
+              class="d-inline-block align-text-top" />
+          </a>
         </div>
         <button
           class="navbar-toggler"
@@ -215,9 +216,9 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <ul class="btn-group">
                 <li class="nav-item">
