--- a/src/ru/contacty.html
+++ b/src/ru/contacty.html
@@ -68,7 +68,6 @@
     </noscript>
     <!-- End Facebook Pixel Code -->
   </head>
-
   <body class="contacts_body">
     <!-- Google Tag Manager (noscript) -->
     <noscript>
@@ -197,12 +196,14 @@
             width="52"
             height="48"
             class="d-inline-block align-text-top" />
-          <img
-            src="../img/logo_menu2.webp"
-            alt="logo"
-            width="142"
-            height="48"
-            class="d-inline-block align-text-top" />
+          <a href="./index.html">
+            <img
+              src="../img/logo_menu2.webp"
+              alt="logo"
+              width="142"
+              height="48"
+              class="d-inline-block align-text-top" />
+          </a>
         </div>
         <button
           class="navbar-toggler"
@@ -216,9 +217,9 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <ul class="btn-group">
                 <li class="nav-item">
@@ -410,10 +411,10 @@
           <h5 class="text-center green"><b>ВЕНДИНГ</b></h5>
           <div class="container hr-line-contacts"></div>
           <h6>
-            Установка вендингового оборудования по городам: Харьков, Киев, 
-            Бровары, Белая Церковь, Полтава, Николаев, Днепр, Запорожье, 
-            Ровно, Львов, Луцк, Тернополь, Каменец-Подольский, Ивано-Франковск, 
-            Черновцы, Винница, Житомир, Одесса, Кривой Рог, Чернигов, Коломыя, Стрый.
+            Установка вендингового оборудования по городам: Харьков, Киев, Бровары, Белая
+            Церковь, Полтава, Николаев, Днепр, Запорожье, Ровно, Львов, Луцк, Тернополь,
+            Каменец-Подольский, Ивано-Франковск, Черновцы, Винница, Житомир, Одесса,
+            Кривой Рог, Чернигов, Коломыя, Стрый.
           </h6>
           <ul>
             <li class="text-nowrap tel">
@@ -582,10 +583,10 @@
               <div class="footer-left">
                 <h6>ВЕНДИНГ</h6>
                 <p>
-                  Установка вендингового оборудования по городам: Харьков, Киев, 
-                  Бровары, Белая Церковь, Полтава, Николаев, Днепр, Запорожье, 
-                  Ровно, Львов, Луцк, Тернополь, Каменец-Подольский, Ивано-Франковск, 
-                  Черновцы, Винница, Житомир, Одесса, Кривой Рог, Чернигов, Коломыя, Стрый.
+                  Установка вендингового оборудования по городам: Харьков, Киев, Бровары,
+                  Белая Церковь, Полтава, Николаев, Днепр, Запорожье, Ровно, Львов, Луцк,
+                  Тернополь, Каменец-Подольский, Ивано-Франковск, Черновцы, Винница,
+                  Житомир, Одесса, Кривой Рог, Чернигов, Коломыя, Стрый.
                 </p>
               </div>
               <h6>Менеджер по развитию</h6>
