--- a/src/ru/dlya_cafe_restoranov.html
+++ b/src/ru/dlya_cafe_restoranov.html
@@ -40,9 +40,7 @@
       !(function (f, b, e, v, n, t, s) {
         if (f.fbq) return;
         n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
+          n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments);
         };
         if (!f._fbq) f._fbq = n;
         n.push = n;
@@ -54,12 +52,7 @@
         t.src = v;
         s = b.getElementsByTagName(e)[0];
         s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
+      })(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
       fbq("init", "1211586936450413");
       fbq("track", "PageView");
       fbq("track", "Lead");
@@ -91,7 +84,7 @@
             <div class="header__item col">
               <ul>
                 <li class="telephone text-nowrap">
-                  <a class="telephone" href="tel:+380960542770"></a>
+                  <a class="telephone" href="tel:+380960542770">
                     ХАРЬКОВ (096) 054-27-70
                   </a>
                 </li>
@@ -152,9 +145,7 @@
               <ul>
                 <li class="telephone">ВЕНДИНГ</li>
                 <li class="telephone text-nowrap">
-                  <a class="telephone" href="tel:+380950252822">
-                    (095) 025-28-22
-                  </a>
+                  <a class="telephone" href="tel:+380950252822">(095) 025-28-22</a>
                 </li>
               </ul>
             </div>
@@ -189,10 +180,7 @@
           class="sidepanel__icon">
           <img src="../img/index/facebook_green.webp" alt="facebook" />
         </a>
-        <a
-          target="_blank"
-          href="https://t.me/bianchi_prof"
-          class="sidepanel__icon">
+        <a target="_blank" href="https://t.me/bianchi_prof" class="sidepanel__icon">
           <img src="../img/index/telegram_green.webp" alt="telegram" />
         </a>
       </div>
@@ -208,12 +196,14 @@
             width="52"
             height="48"
             class="d-inline-block align-text-top" />
-          <img
-            src="../img/logo_menu2.webp"
-            alt="logo"
-            width="142"
-            height="48"
-            class="d-inline-block align-text-top" />
+          <a href="./index.html">
+            <img
+              src="../img/logo_menu2.webp"
+              alt="logo"
+              width="142"
+              height="48"
+              class="d-inline-block align-text-top" />
+          </a>
         </div>
         <button
           class="navbar-toggler"
@@ -225,14 +215,10 @@
           aria-label="Переключатель навигации">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="btn text-nowrap" role="button" href="./index.html">
-                ПРО НАС
-              </a>
+              <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
             </li>
             <li class="nav-item">
               <ul class="btn-group">
@@ -246,16 +232,12 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li>
-                      <a
-                        class="dropdown-item"
-                        href="./dlya_magazinov_i_setey.html">
+                      <a class="dropdown-item" href="./dlya_magazinov_i_setey.html">
                         Для магазинов и торговых сетей
                       </a>
                     </li>
                     <li>
-                      <a
-                        class="dropdown-item"
-                        href="./dlya_cafe_restoranov.html">
+                      <a class="dropdown-item" href="./dlya_cafe_restoranov.html">
                         Для кафе, ресторанов, офисов
                       </a>
                     </li>
@@ -335,15 +317,11 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="btn text-nowrap" role="button" href="./contacty.html">
-                КОНТАКТЫ
-              </a>
+              <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТЫ</a>
             </li>
             <li class="nav-item">
               <div class="btn-group lang" role="group">
-                <a
-                  class="btn btn-outline-success"
-                  href="../dlya_cafe_restoranov.html">
+                <a class="btn btn-outline-success" href="../dlya_cafe_restoranov.html">
                   UA
                 </a>
                 <a class="btn btn-outline-success active" href="#">RU</a>
@@ -377,8 +355,7 @@
               <div class="card-body">
                 <h5 class="fw-bold">Оборудование в аренду</h5>
                 <p class="card-text main-text-size">
-                  Мы предоставляем в аренду широкий выбор кофейного
-                  оборудования. Як
+                  Мы предоставляем в аренду широкий выбор кофейного оборудования. Як
                   <a href="./avtomaty.html">Суперавтоматы</a>
                   с сенсорным экраном, так и
                   <a href="./postovie.html">Классические</a>
@@ -402,9 +379,9 @@
                   продуков
                 </h5>
                 <p class="card-text main-text-size">
-                  Мы предлагаем вам не только качественный кофе и составляющие,
-                  но и сопутствующие товары: сиропы, стаканы, сахар, мешалки, а
-                  также большой выбор барной атрибутики.
+                  Мы предлагаем вам не только качественный кофе и составляющие, но и
+                  сопутствующие товары: сиропы, стаканы, сахар, мешалки, а также большой
+                  выбор барной атрибутики.
                 </p>
               </div>
             </div>
@@ -418,10 +395,9 @@
               <div class="card-body">
                 <h5 class="fw-bold">Сопровождение и обслуживание</h5>
                 <p class="card-text main-text-size">
-                  Визит шеф-бариста раз в неделю, в течение которого проверяется
-                  качество приготовления эспрессо, настройка кофемолок и общее
-                  техническое состояние. А также своевременная доставка
-                  продукции.
+                  Визит шеф-бариста раз в неделю, в течение которого проверяется качество
+                  приготовления эспрессо, настройка кофемолок и общее техническое
+                  состояние. А также своевременная доставка продукции.
                 </p>
               </div>
             </div>
@@ -441,12 +417,12 @@
         </div>
         <div class="col-lg-6">
           <p class="p-4 magazine indent main-text-size">
-            Мало кто хочет брать кота в мешке. Особенно, когда это касается не
-            одной чашки кофе на завтрак, а целого сегмента в вашем заведении.
-            Понимая это, мы всегда проводим презентацию услуг и товаров в нашем
-            шоуруме. Будущие партнеры могут попробовать разные купажи кофе,
-            посмотреть поближе на оборудование и пообщаться со специалистами,
-            сопровождающими в течение всего периода сотрудничества.
+            Мало кто хочет брать кота в мешке. Особенно, когда это касается не одной чашки
+            кофе на завтрак, а целого сегмента в вашем заведении. Понимая это, мы всегда
+            проводим презентацию услуг и товаров в нашем шоуруме. Будущие партнеры могут
+            попробовать разные купажи кофе, посмотреть поближе на оборудование и
+            пообщаться со специалистами, сопровождающими в течение всего периода
+            сотрудничества.
           </p>
         </div>
       </div>
@@ -455,28 +431,21 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="p-4">
-            <h5 class="green text-center">
-              Преимущества сотрудничества с нами
-            </h5>
+            <h5 class="green text-center">Преимущества сотрудничества с нами</h5>
             <ul class="main-text-size">
+              <li>Мы предоставляем в аренду оборудование итальянского производителя.</li>
               <li>
-                Мы предоставляем в аренду оборудование итальянского
-                производителя.
+                Специалисты компании регулярно посещают наших клиентов, предлагая полный
+                спектр сервисного обслуживания, от мелкого планового ремонта на месте, до
+                капитального ремонта на территории нашей мастерской.
               </li>
               <li>
-                Специалисты компании регулярно посещают наших клиентов,
-                предлагая полный спектр сервисного обслуживания, от мелкого
-                планового ремонта на месте, до капитального ремонта на
-                территории нашей мастерской.
-              </li>
-              <li>
-                Регулярное обучение вашего персонала, проведение тренингов,
-                семинаров для повышения квалификации ваших сотрудников.
+                Регулярное обучение вашего персонала, проведение тренингов, семинаров для
+                повышения квалификации ваших сотрудников.
               </li>
               <li>
                 Широкий спектр продуктов для приготовления горячих напитков. Мы
-                гарантируем максимально возможную прибыль при работе с нашими
-                продуктами.
+                гарантируем максимально возможную прибыль при работе с нашими продуктами.
               </li>
             </ul>
           </div>
@@ -503,8 +472,8 @@
                 <h5>Оформление</h5>
                 <p class="lh-sm text-muted">
                   <small>
-                    Оставьте заявку на нашем сайте по телефону или с помощью
-                    электронной почты.
+                    Оставьте заявку на нашем сайте по телефону или с помощью электронной
+                    почты.
                   </small>
                 </p>
               </div>
@@ -516,10 +485,9 @@
                 <h5>Подтверждение</h5>
                 <p class="lh-sm text-muted">
                   <small>
-                    Наш менеджер свяжется с Вами и подготовит для Вас самую
-                    выгодное предложение, исходя из ваших потребностей. Если
-                    нужно, проведет презетацию в нашем шоуруме или с выездом к
-                    Вам.
+                    Наш менеджер свяжется с Вами и подготовит для Вас самую выгодное
+                    предложение, исходя из ваших потребностей. Если нужно, проведет
+                    презетацию в нашем шоуруме или с выездом к Вам.
                   </small>
                 </p>
               </div>
@@ -543,9 +511,9 @@
                 <h5>обслуживание</h5>
                 <p class="lh-sm text-muted">
                   <small>
-                    Наш шеф-бариста и сервисный инженер раз в неделю буду
-                    посещать вас для обслуживание и настройки кофемашины, а
-                    также для доставки необходимых ингредиентов.
+                    Наш шеф-бариста и сервисный инженер раз в неделю буду посещать вас для
+                    обслуживание и настройки кофемашины, а также для доставки необходимых
+                    ингредиентов.
                   </small>
                 </p>
               </div>
@@ -681,10 +649,10 @@
               <div class="footer-left">
                 <h6>ВЕНДИНГ</h6>
                 <p>
-                  Установка вендингового оборудования по городам: Харьков, Киев, 
-                  Бровары, Белая Церковь, Полтава, Николаев, Днепр, Запорожье, 
-                  Ровно, Львов, Луцк, Тернополь, Каменец-Подольский, Ивано-Франковск, 
-                  Черновцы, Винница, Житомир, Одесса, Кривой Рог, Чернигов, Коломыя, Стрый.
+                  Установка вендингового оборудования по городам: Харьков, Киев, Бровары,
+                  Белая Церковь, Полтава, Николаев, Днепр, Запорожье, Ровно, Львов, Луцк,
+                  Тернополь, Каменец-Подольский, Ивано-Франковск, Черновцы, Винница,
+                  Житомир, Одесса, Кривой Рог, Чернигов, Коломыя, Стрый.
                 </p>
               </div>
               <h6>Менеджер по развитию</h6>
@@ -695,9 +663,7 @@
               </p>
               <h6>Эл.адрес для вопросов, замечаний и предложений:</h6>
               <p class="footer-left">
-                <a
-                  class="telephone text-nowrap"
-                  href="mailto:support@bianchiprof.com">
+                <a class="telephone text-nowrap" href="mailto:support@bianchiprof.com">
                   support@bianchiprof.com
                 </a>
               </p>
@@ -791,10 +757,7 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                 Закрыть
               </button>
               <button name="sendRequestModal" class="btn send-request-modal">
