--- a/src/ru/index.html
+++ b/src/ru/index.html
@@ -66,7 +66,6 @@
     </noscript>
     <!-- End Facebook Pixel Code -->
   </head>
-
   <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
@@ -195,12 +194,14 @@
             width="52"
             height="48"
             class="d-inline-block align-text-top" />
-          <img
-            src="../img/logo_menu2.webp"
-            alt="logo"
-            width="142"
-            height="48"
-            class="d-inline-block align-text-top" />
+          <a href="./index.html">
+            <img
+              src="../img/logo_menu2.webp"
+              alt="logo"
+              width="142"
+              height="48"
+              class="d-inline-block align-text-top" />
+          </a>
         </div>
         <button
           class="navbar-toggler"
@@ -214,9 +215,9 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <ul class="btn-group">
                 <li class="nav-item">
@@ -389,7 +390,7 @@
     <!-- /////////////////////////////////////////   Images    ////////////////////////////////////////     -->
     <div class="container images mb-5">
       <div class="row">
-        <div class="col-lg-4 p-1">
+        <div class="col p-1">
           <div class="image">
             <a href="./dlya_magazinov_i_setey.html">
               <img src="../img/index/horeca.webp" class="card-img-top" alt="horeca" />
@@ -401,7 +402,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 p-1">
+        <div class="col p-1">
           <div class="image">
             <a href="./dlya_cafe_restoranov.html">
               <img src="../img/index/classic.webp" class="card-img-top" alt="classic" />
