--- a/src/index.html
+++ b/src/index.html
@@ -301,12 +301,11 @@
       </div>
     </nav>
     <!-- /////////////////////////////// breadcrumb //////////////////////////////////// -->
-    <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
+    <!-- <nav class="container" style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
       <ol class="breadcrumb mb-2">
         <li class="breadcrumb-item"><a class="greenlink" href="./index.html">Головна</a></li>
-        <!-- <li class="breadcrumb-item active" aria-current="page">Библиотека</li> -->
       </ol>
-    </nav>
+    </nav> -->
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <!-- <div class="banner">
         <div class="container">
