--- a/src/ru/vending.html
+++ b/src/ru/vending.html
@@ -396,7 +396,7 @@
           <p class="p-4 magazine indent">
             Сложно вообразить жизнь любой современной компании без аромата кофе. Наиболее
             удобный и выгодный способ повысить комфорт и эффективность работы ваших
-            сотрудников - установка кофейных и <a href="./vending_snack.html">снековых автоматов</a> в вашем офисе, на предприятии или в
+            сотрудников - установка кофейных и <a class="greenlink" href="./vending_snack.html">снековых автоматов</a> в вашем офисе, на предприятии или в
             торговом/бизнес центре, магазине, учебном заведении. Предлагаем установку и
             обслуживание кофейного оборудования премиум-класса (производитель – Италия).
             Аппараты готовят качественный зерновой кофе от лидеров европейского рынка и
