--- a/src/vending.html
+++ b/src/vending.html
@@ -396,7 +396,7 @@
           <p class="p-4 magazine indent">
             Складно уявити життя будь-якої сучасної компанії без аромату кави. Найбільш
             зручний та вигідний спосіб підвищити комфорт та ефективність роботи ваших
-            співробітників - встановлення кавових та <a href="./vending_snack.html">снекових автоматів</a> в вашому офісі, на
+            співробітників - встановлення кавових та <a class="greenlink" href="./vending_snack.html">снекових автоматів</a> в вашому офісі, на
             підприємстві або в торговому/бізнес центрі, магазині, начальному закладі.
             Пропонуємо встановлення та обслуговування кавового обладнання преміум-класу
             (виробник - Італія). Апарати готують якісну зернову каву від лідерів
