--- a/src/rashodniki.html
+++ b/src/rashodniki.html
@@ -378,6 +378,59 @@
               <img
                 src="./img/rashodniki/chayniy_stakan.webp"
                 class="card-img-top combo"
+                alt="бумажные стаканы для чая" />
+              <figcaption class="goods">
+                <ul class="lh-sm">
+                  <li>
+                    <b>
+                      Об'єм:
+                      <br />
+                    </b>
+                  300 мл
+                  </li>
+                  <br />
+                  <li>
+                    <b>
+                      Ламінування:
+                      <br />
+                    </b>
+                    одностороннє
+                    <br />
+                    (зовнішнє)
+                  </li>
+                  <br />
+                  <li>
+                    <b>
+                      Макс.
+                      <br />
+                      температура:
+                      <br />
+                    </b>
+                    до 90°С
+                  </li>
+                </ul>
+              </figcaption>
+            </figure>
+            <div class="card-body">
+              <h3 class="text-center">
+                Картонні стакани для чая Bianchi
+              </h3>
+              <small>
+                <p class="lh-sm">Одноразові стаканчики для чаю Bianchi – 
+                  це поєднання стилю, зручності та екологічності. Виготовлена ​​з високоякісного картону, ця склянка ідеальна для колекції чаїв Bianchi.</p>
+                <p class="lh-sm">
+                  Склянки виготовляються із міцного якісного картону із застосуванням зовнішньої ламінації.
+                </p>
+              </small>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-1">
+          <div class="card hover-text-one">
+            <figure class="effect-text-three">
+              <img
+                src="./img/rashodniki/sahar.webp"
+                class="card-img-top combo"
                 alt="Одноразовий стакан" />
               <figcaption class="goods">
                 <ul class="lh-sm">
