--- a/src/ru/vending.html
+++ b/src/ru/vending.html
@@ -470,7 +470,7 @@
                   <small>
                     Наш специалист свяжется с Вами для определения места установки
                     кофейного аппарата
-                    <span class="select">*</span>
+                    <span class="select text-nowrap">*</span>
                   </small>
                 </p>
               </div>
