--- a/src/ru/vending_snack.html
+++ b/src/ru/vending_snack.html
@@ -453,7 +453,7 @@
                 <p class="lh-sm">
                     Большое окно витрины с безопасным двойным стеклом, демонстрирующее ваши товары в наиболее выгодном свете.
                 </p>
-                <p class="lh-sm">Дверной замок с программным кодом./p>
+                <p class="lh-sm">Дверной замок с программным кодом.</p>
                 <p class="lh-sm">Регулируемая высота полок.</p>
                 <p class="lh-sm">LED подсветка.</p>
                 <p class="lh-sm">Окно выдачи товаров с системой против воровства.</p>
