--- a/src/vending.html
+++ b/src/vending.html
@@ -468,8 +468,7 @@
                 <p class="lh-sm text-muted">
                   <small>
                     Наш фахівець зв'яжеться з Вами для визначення місця установки кавового
-                    апарату
-                    <span class="select">*</span>
+                    апарату<span class="select text-nowrap">*</span>
                   </small>
                 </p>
               </div>
